--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,10 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mobile_navigation"
     app:startDestination="@id/locationsFragment">
 
     <fragment
         android:id="@+id/locationsFragment"
-        android:name="com.arusoft.mobile.searchlocations.presentation.ui.LocationsFragment"
-        android:label="LocationsFragment" />
+        android:name="com.arusoft.mobile.searchlocations.presentation.ui.VenuesHomeFragment"
+        android:label="VenuesHomeFragment"
+        tools:layout="@layout/fragment_locations_list">
+
+        <action
+            android:id="@+id/action_locationsFragment_to_venueDetailsFragment"
+            app:destination="@id/venueDetailsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+
+        <action
+            android:id="@+id/action_locationsFragment_to_venuesMapFragment"
+            app:destination="@id/venuesMapFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/venueDetailsFragment"
+        android:name="com.arusoft.mobile.searchlocations.presentation.ui.VenueDetailsFragment"
+        android:label="VenueDetailsFragment"
+        tools:layout="@layout/fragment_venue_details_fragment" />
+
+    <fragment
+        android:id="@+id/venuesMapFragment"
+        android:name="com.arusoft.mobile.searchlocations.presentation.ui.VenuesMapFragment"
+        android:label="VenuesMapFragment"
+        tools:layout="@layout/fragment_venues_map" />
 </navigation>
