--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    android:padding="8dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_container_view"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_container_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="8dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <!--the name of the place (e.g., Flitch Coffee),
-       the category of the place (e.g., Coffee Shop),
-       the icon from the response,
-       the distance from the center of Seattle (47.6062° N, 122.3321° W) to the place,
-       and whether the place has been favorited by the user.
-       Clicking a list item should launch the details screen for that place.-->
-
 
         <ImageView
             android:id="@+id/venue_image"
@@ -38,26 +30,58 @@
 
         <TextView
             android:id="@+id/venue_name"
-            android:layout_width="wrap_content"
+            style="@style/Base.TextAppearance.AppCompat.Headline"
+            android:textSize="20sp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="TextView"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/venue_image"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="TextView" />
 
         <TextView
             android:id="@+id/venue_category"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginEnd="8dp"
+            tools:text="TextView"
+            android:textColor="@color/colorCaption"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/venue_image"
             app:layout_constraintTop_toBottomOf="@+id/venue_name" />
+
+        <TextView
+            android:id="@+id/venue_address"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            tools:text="TextView"
+            android:textColor="@color/colorCaption"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintTop_toBottomOf="@+id/venue_category" />
+
+        <TextView
+            android:id="@+id/venue_distance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            tools:text="TextView"
+            android:textColor="@color/colorCaption"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintTop_toBottomOf="@+id/venue_address" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
