--- a/app/src/main/res/layout/fragment_venue_details.xml
+++ b/app/src/main/res/layout/fragment_venue_details.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/venue_map" />
 
     <TextView
         android:id="@+id/category_name_view"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/name_view" />
 
     <TextView
-        android:id="@+id/city_view"
+        android:id="@+id/venue_address_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -44,12 +44,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/category_name_view" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <!--<FrameLayout-->
+        <!--android:id="@+id/venue_map"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="215dp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--android:background="@android:color/darker_gray" />-->
+
+    <TextView
+        android:id="@+id/venue_city_view"
         android:layout_width="0dp"
-        android:layout_height="215dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/darker_gray" />
+        app:layout_constraintTop_toBottomOf="@+id/venue_address_view" />
+
+    <TextView
+        android:id="@+id/venue_state_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/venue_city_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
