--- a/app/src/main/res/layout/activity_second_level.xml
+++ b/app/src/main/res/layout/activity_second_level.xml
@@ -26,15 +26,31 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <fragment
-            android:id="@+id/venue_map"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content">
+
+            <fragment
+                android:id="@+id/venue_map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:background="@android:color/darker_gray"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/venue_details_favorite_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/heart_button_background"
+                android:layout_gravity="top|right"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:srcCompat="@drawable/ic_fav_heart_unfilled"/>
+
+        </FrameLayout>
 
 
     </com.google.android.material.appbar.AppBarLayout>
