--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -13,10 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/venue_image"
-            android:layout_width="123dp"
-            android:layout_height="116dp"
+        <FrameLayout
+            android:id="@+id/item_image_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
@@ -25,8 +25,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.029"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:color/darker_gray" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/venue_image"
+                android:layout_width="123dp"
+                android:layout_height="116dp"
+                android:background="@color/dark_white"/>
+
+            <ImageButton
+                android:id="@+id/favorite_venue_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/heart_button_background"
+                android:layout_gravity="bottom|left"
+                android:layout_marginBottom="3dp"
+                android:layout_marginStart="3dp"
+                app:srcCompat="@drawable/ic_fav_heart_unfilled"/>
+        </FrameLayout>
 
         <TextView
             android:id="@+id/venue_name"
@@ -40,7 +56,7 @@
             android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintStart_toEndOf="@+id/item_image_container"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="TextView" />
 
@@ -54,7 +70,7 @@
             tools:text="TextView"
             android:textColor="@color/colorCaption"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintStart_toEndOf="@+id/item_image_container"
             app:layout_constraintTop_toBottomOf="@+id/venue_name" />
 
         <TextView
@@ -67,7 +83,7 @@
             tools:text="TextView"
             android:textColor="@color/colorCaption"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintStart_toEndOf="@+id/item_image_container"
             app:layout_constraintTop_toBottomOf="@+id/venue_category" />
 
         <TextView
@@ -80,7 +96,7 @@
             tools:text="TextView"
             android:textColor="@color/colorCaption"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/venue_image"
+            app:layout_constraintStart_toEndOf="@+id/item_image_container"
             app:layout_constraintTop_toBottomOf="@+id/venue_address" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
